# CleanArchitectureRxSwift

./: .gitattributes  .gitignore  .mise.toml  .package.resolved  Cartfile  Cartfile.resolved  LICENSE  Podfile  Podfile.save  README.md  Workspace.swift  apollo-codegen-config.json  project.yml
.github/workflows/: ios.yml
Architecture/: Modules Details.drawing  Modules.drawing
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/src/: CMakeLists.txt  shared_realm.cpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/src/impl/: realm_coordinator.cpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/src/impl/epoll/: external_commit_helper.cpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/src/impl/windows/: external_commit_helper.cpp  external_commit_helper.hpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/src/parser/: query_builder.cpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/src/util/generic/: event_loop_signal.cpp  event_loop_signal.hpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/src/util/uv/: event_loop_signal.hpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/tests/: CMakeLists.txt  list.cpp  migrations.cpp  object.cpp  object_store.cpp  realm.cpp  results.cpp  schema.cpp  thread_safe_reference.cpp  transaction_log_parsing.cpp
Carthage/Checkouts/realm-cocoa/Realm/ObjectStore/tests/util/: any.hpp  index_helpers.hpp  test_file.cpp  test_file.hpp
CleanArchitectureRxSwift/: AppDelegate.swift  Info.plist  ViewController.swift
CleanArchitectureRxSwift.xcodeproj/: project.pbxproj
CleanArchitectureRxSwift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CleanArchitectureRxSwift.xcworkspace/: contents.xcworkspacedata
CleanArchitectureRxSwift/AllPosts/: PostsNavigator.swift  PostsViewController.swift  PostsViewModel.swift
CleanArchitectureRxSwift/Application/: Application.swift
CleanArchitectureRxSwift/Base.lproj/: Main.storyboard
CleanArchitectureRxSwift/Common/: ViewModelType.swift
CleanArchitectureRxSwift/CreatePost/: CreatePostViewController.swift
CleanArchitectureRxSwift/Utility/: ActivityIndicator.swift  Driver+Ext.swift  ErrorTracker.swift  Observable+Ext.swift  Result.swift  Reusable.swift
CleanArchitectureRxSwiftTests/: CleanArchitectureRxSwiftTests.swift
CleanArchitectureRxSwiftTests/Scenes/: MockPostsUseCase.swift
CoreDataPlatform/: CoreDataPlatform.h
CoreDataPlatform/CoreDataStack/: CoreDataStack.swift
CoreDataPlatform/Entities/: CDAddress+CoreDataClass.swift  CDAddress+CoreDataProperties.swift  CDAddress+Ext.swift  CDAlbum+CoreDataClass.swift  CDAlbum+CoreDataProperties.swift  CDAlbum+Ext.swift  CDComment+CoreDataClass.swift  CDComment+CoreDataProperties.swift  CDComment+Ext.swift  CDCompany+CoreDataClass.swift  CDCompany+CoreDataProperties.swift  CDCompany+Ext.swift  CDLocation+CoreDataClass.swift  CDLocation+CoreDataProperties.swift  CDLocation+Ext.swift  CDMedia+CoreDataClass.swift  CDMedia+CoreDataProperties.swift  CDMedia+Ext.swift  CDPhoto+CoreDataClass.swift  CDPhoto+CoreDataProperties.swift  CDPhoto+Ext.swift  CDPost+CoreDataClass.swift  CDPost+CoreDataProperties.swift  CDPost+Ext.swift  CDTodo+CoreDataClass.swift  CDTodo+CoreDataProperties.swift  CDTodo+Ext.swift  CDUser+CoreDataClass.swift  CDUser+CoreDataProperties.swift  CDUser+Ext.swift
CoreDataPlatform/Extensions/: NSManagedObjectContext+Ext.swift  Observable+Ext.swift
CoreDataPlatform/Repository/: Repository.swift
CoreDataPlatform/RxCoreData/: ContextScheduler.swift  FetchedResultsControllerEntityObserver.swift  NSManagedObjectContext+Rx.swift
CoreDataPlatform/UseCases/: AllPostsUseCase.swift  CreatePostUseCase.swift  PostsUseCase.swift  SavePostUseCase.swift  ServiceLocator.swift  SharedServices.swift  UseCaseProvider.swift
CoreDataPlatformTests/: CoreDataPlatformTests.swift
Domain/: Domain.h  ServiceLocator.swift
Domain/Entries/: Address.swift  Album.swift  Comment.swift  Company.swift  Location.swift  Media.swift  Photo.swift  Post.swift  Todo.swift  User.swift
Domain/UseCases/: AllPostsUseCase.swift  AuthUseCase.swift  CreatePostUseCase.swift  PostsUseCase.swift  UseCaseProvider.swift
DomainTests/: DomainTests.swift
ModernCleanArchitecture/ExampleApp/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ModernCleanArchitecture/ExampleAppTests/: ExampleAppTests.swift
ModernCleanArchitecture/ExampleAppUITests/: ExampleAppUITests.swift  ExampleAppUITestsLaunchTests.swift
ModernCleanArchitecture/ModernCleanArchitecture.xcodeproj/: project.pbxproj
MyNetwork/API/: AlbumsNetwork.swift  CommentsNetwork.swift  PhotosNetwork.swift  PostsNetwork.swift  TodosNetwork.swift  UsersNetwork.swift
MyNetwork/Entries/: Todo+Mapping.swift
MyNetwork/Network/: MyNetwork.swift  MyNetworkProvider.swift
MyNetwork/UseCases/: PostsUseCase.swift
MyPlayground.playground/: Contents.swift
Network/: Network.h  Observable+ObjectMapper.swift
Network/API/: AlbumsNetwork.swift  CommentsNetwork.swift  NetworkModel.swift  PhotosNetwork.swift  PostsNetwork.swift  TodosNetwork.swift  UsersNetwork.swift
Network/Cache/: Cache.swift
NetworkPlatform/: Info.plist
NetworkPlatformTests/: NetworkTests.swift
NetworkTests/: NetworkTests.swift
RealmPlatform/: RealmPlatform.h
RealmPlatformTests/: RealmPlatformTests.swift
Tuist/: Config.swift  Package.resolved  Package.swift
images/: layers.drawing
scripts/: exec_pod_install.sh
(+325 files in other folders)
